# kwStat

./: CMakeLists.txt  README  kwStat.h
Testing/: CMakeLists.txt  constructorTest.cxx  fileLength.cxx  fileSizeTest.cxx  openTest.cxx  statSizeTest.cxx  verifyLargestStat.cxx
